# Catalogue-Backend

./: .gitignore  README.md  pyproject.toml  requirements.txt
app/: config.py  main.py
app/api/v1/: catalogs.py  deps.py  templates.py
app/core/: database.py  exceptions.py  logging.py  sanitize.py
app/db/models/: catalog.py  template.py
app/db/repositories/: base.py  catalog_repo.py  template_repo.py
app/domain/schemas/: catalog.py  requests.py  responses.py
app/domain/services/: catalog_service.py  template_service.py
app/exporters/: base.py  pdf_exporter.py  png_exporter.py
app/extractors/: base.py  docx.py  factory.py  pdf.py  txt.py
app/llm/: anthropic_provider.py  base.py  factory.py  gemini.py  ollama_provider.py  openai_provider.py  prompts.py
app/renderers/: base.py  factory.py  freestyle_renderer.py  image_url.py  jinja_renderer.py
app/scripts/: generate_previews.py  init_db.py
