[project]
name = "catalog-maker-server"
version = "0.1.0"
description = "FastAPI service that turns raw brand/product input into editable one-page catalogs"
requires-python = ">=3.10"

dependencies = [
    # Web
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "python-multipart>=0.0.9",        # file uploads

    # Config
    "pydantic>=2.6.0",
    "python-dotenv>=1.0.0",       # loads .env into the environment (see app/config.py)

    # DB
    "sqlalchemy[asyncio]>=2.0.30",
    "asyncpg>=0.29.0",

    # Templating + extraction (Phase 1 deps that stay)
    "jinja2>=3.1.0",
    "pymupdf>=1.24.0",
    "python-docx>=1.1.0",
    "weasyprint>=62.0",             

    # LLM SDKs
    "google-genai>=0.3.0",
    "openai>=1.40.0",
    "anthropic>=0.34.0",
    "httpx>=0.27.0",                   # Ollama (async HTTP)
]

[project.optional-dependencies]
# Optional headless-Chromium fallback for PDF export, used only if WeasyPrint
# fails on some exotic CSS. The default install stays light (WeasyPrint only).
# Enable with:  pip install -e ".[chromium]" && playwright install chromium
chromium = [
    "playwright>=1.46.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]
